[package]
name = "termsweeper"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = "0.25.0"
rand = { version = "0.8.5", default-features = false, features = ["getrandom", "std", "std_rng"] }
figlet-rs = "0.1.4"
once_cell = "1.16.0"
